feat: support custom link preview thumbnails
